Add Chapter 4 lessons and style.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width initial-scale=1'>
     <title>World Studies: Eastern Hemisphere</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,16 +30,77 @@
             Earbuds</li>
     </ol>
     <h2>Expectations</h2>
-    <p></p>
+    <p>The following information details the expectations we will normally deal with when we meet for class. The beginning of
+        class (the first three to five minutes), during class, and the end of class (the last minute) are all important for
+        creating a successful learning environment. When you don&#39;t meet the course expectations, you will receive one,
+        two, or three strikes. Once you receive two strikes, your name will be added to the school detention list. Once you
+        receive three strikes, you will be referred to the office. Strikes reset each day.</p>
+    <h3>Beginning Class</h3>
+    <ol>
+        <li>
+            Come to class prepared with your daily materials: textbook, class binder, planner, black pen, blue pen, red pen, mechanical
+            pencil, 8GB USB drive, and earbuds. If you do not have your class materials by the time class starts you will
+            receive a strike.</li>
+        <li>
+            Leave your bag outside the classroom without obstructing the walkway. If you bring a backpack into the classroom without
+            permission from the teacher you will receive a strike.</li>
+        <li>
+            Completely power down your phone and leave it on my desk. If your phone is powered on during class without permission from
+            me, you will receive a strike. If you use your phone without permission, you will receive two strikes and your
+            phone will be turned in to the office for the rest of the day.</li>
+        <li>
+            Enter the room silently and remain silent until I instruct you otherwise. If you talk to a classmate before I instruct you,
+            you will receive a strike.</li>
+        <li>
+            Sit down in your seat and log in to your workstation by the class bell. If you are not seated in your assigned seat by the
+            class bell you will receive two strikes unless you have a written excuse form from the office or your previous
+            teacher. The written excuse must explain where you were, what you were doing, the time you were sent to me, and
+            who is excusing you. If you cannot log in, you must let me know immediately.</li>
+        <li>
+            Check your email for the daily class instructions and read them completely in whichever language you are most comfortable
+            with. If you miss class for any reason you are still responsible to check your email that day.</li>
+        <li>
+            Add any homework or dated reminders to your planner. When you are done, leave your planner open on your desk for me to sign.</li>
+        <li>
+            Begin silently working on the tasks for the class period.</li>
+    </ol>
+    <h3>During Class</h3>
+    <ol>
+        <li>
+            If I need your attention during class, I will raise my hand and say &quot;High five please.&quot; You should stop what you
+            are doing, turn to face me, and raise your hand.</li>
+        <li>
+            If you need assistance during class, raise your hand.</li>
+        <li>
+            You cannot leave class without permission from the teacher. If you have a valid reason for leaving class, you will be given
+            permission, but normally I will not allow more than one student to leave the room at a time. You must take a
+            hall pass with you in order to leave the classroom.</li>
+    </ol>
+    <h3>Ending Class</h3>
+    <ol>
+        <li>
+            Do not pack up materials and log out of your workstation until the one-minute bell. If you begin packing up and logging out
+            before the one-minute bell without permission, you will receive a strike. During the end of class, it is important
+            to remain silent so that you can hear any announcements from the teacher or the office.</li>
+        <li>
+            Once the one-minute bell rings, silently log out of your workstation. Do not shut down your computer.</li>
+        <li>
+            Silently wrap up your headphones using the hourglass wrap and place them in your binder pocket.</li>
+        <li>
+            Silently place your pens, pencil, and USB drive in your binder pocket.</li>
+        <li>
+            Silently close your binder and planner.</li>
+        <li>
+            At the final bell, silently stand up, push in your chair, and pick up your materials. At this point you may talk. If you
+            have a question for me, please remain in your seat so I can talk to you after your classmates have left. </li>
+    </ol>
     <h2>Syllabus</h2>
-    <p></p>
     <h3>Unit 1: Course Introduction</h3>
     <h4>Orientation</h4>
-    <p></p>
     <h4>Chapter 4 Cultures of the World</h4>
-    <p><a href=''>Chapter 4.1 Understanding Culture</a> | <a href=''>(Lesson Plan)</a></p>
-    <p><a href=''>Chapter 4.2 Culture and Society</a> | <a href=''>(Lesson Plan)</a></p>
-    <p><a href=''>Chapter 4.3 Cultural Change</a> | <a href=''>(Lesson Plan)</a></p>
+    <p>Chapter 4.1 Understanding Culture | <a href='Chapter%204.1%20Understanding%20Culture.html'>Lesson Plan</a></p>
+    <p>Chapter 4.2 Culture and Society | <a href='Chapter%204.2%20Culture%20and%20Society.html'>Lesson Plan</a></p>
+    <p>Chapter 4.3 Cultural Change | <a href='Chapter%204.3%20Cultural%20Change.html'>Lesson Plan</a></p>
     <h3>Unit 2: Europe and Russia</h3>
     <h4>Chapter 6 Europe and Russia: Physical Geography</h4>
     <p>Chapter 6.1 Land and Water | Lesson Plan</p>
