--- a/lessonPlanTemplate.html
+++ b/lessonPlanTemplate.html
@@ -32,6 +32,7 @@ Periods: n.n class periods</p>
 <h2 id="assessment">Assessment</h2>
 <h2 id="homework">Homework</h2>
 <h2 id="after-the-lesson">After the Lesson</h2>
-<p><a href="index.html">Go to the Index</a></p>
+<hr />
+<p><a href="index.html">Go Home</a></p>
 </body>
 </html>
