--- a/Orientation.html
+++ b/Orientation.html
@@ -17,7 +17,6 @@
 <h1 class="title">Orientation</h1>
 <p class="author">John Olinda</p>
 </header>
-<p><a href="index.html">Go to the Index</a></p>
 <p>Text: Course Syllabus Periods: 3</p>
 <h2 id="before-the-lesson">Before the Lesson</h2>
 <ol type="1">
@@ -41,6 +40,7 @@
 <h2 id="assessment">Assessment</h2>
 <h2 id="homework">Homework</h2>
 <h2 id="after-the-lesson">After the Lesson</h2>
-<p><a href="index.html">Go to the Index</a></p>
+<hr />
+<p><a href="index.html">Go Home</a></p>
 </body>
 </html>
