--- a/lessonPlanTemplate.html
+++ b/lessonPlanTemplate.html
@@ -18,7 +18,7 @@
 <p class="author">John Olinda</p>
 </header>
 <p>Text: WSEH pp. nnn-nnn<br />
-Periods: n.n class periods</p>
+Periods: n.n</p>
 <h2 id="before-the-lesson">Before the Lesson</h2>
 <ol type="1">
 <li>Prepare Objectives, Opening Instructions, and Homework slides</li>
