Update course syllabus and Orientation lesson

--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
 <h3 id="beginning-class">Beginning Class</h3>
 <ol type="1">
 <li>Come to class prepared with your daily materials: textbook, class binder, planner, black pen, blue pen, red pen, mechanical pencil, 8GB USB drive, and earbuds. If you do not have your class materials by the time class starts you will receive a strike.</li>
-<li>Leave your bag outside the classroom without obstructing the walkway. If you bring a backpack into the classroom without permission from the teacher you will receive a strike.</li>
 <li>Completely power down your phone and leave it on my desk. If your phone is powered on during class without permission from me, you will receive a strike. If you use your phone without permission, you will receive two strikes and your phone will be turned in to the office for the rest of the day.</li>
 <li>Enter the room silently and remain silent until I instruct you otherwise. If you talk to a classmate before I instruct you, you will receive a strike.</li>
-<li>Sit down in your seat and log in to your workstation by the class bell. If you are not seated in your assigned seat by the class bell you will receive two strikes unless you have a written excuse form from the office or your previous teacher. The written excuse must explain where you were, what you were doing, the time you were sent to me, and who is excusing you. If you cannot log in, you must let me know immediately.</li>
-<li>Check your email for the daily class instructions and read them completely in whichever language you are most comfortable with. If you miss class for any reason you are still responsible to check your email that day.</li>
+<li>Sit down in your seat and log in to your workstation by the class bell. If you are not seated in your assigned seat by the class bell you will receive two strikes unless you have a written excuse from the office or your previous teacher. The written excuse must explain where you were, what you were doing, the time you were sent to me, and who is excusing you.</li>
 <li>Add any homework or dated reminders to your planner. When you are done, leave your planner open on your desk for me to sign.</li>
 <li>Begin silently working on the tasks for the class period.</li>
 </ol>
@@ -50,9 +48,9 @@
 </ol>
 <h3 id="ending-class">Ending Class</h3>
 <ol type="1">
-<li>Do not pack up materials and log out of your workstation until the one-minute bell. If you begin packing up and logging out before the one-minute bell without permission, you will receive a strike. During the end of class, it is important to remain silent so that you can hear any announcements from the teacher or the office.</li>
-<li>Once the one-minute bell rings, silently log out of your workstation. Do not shut down your computer.</li>
-<li>Silently wrap up your headphones using the hourglass wrap and place them in your binder pocket.</li>
+<li>Do not pack up until the one-minute bell. If you begin packing up before the one-minute bell without permission, you will receive a strike. During the end of class, it is important to remain silent so that you can hear any announcements from the teacher or the office.</li>
+<li>Once the one-minute bell rings, silently log out of your workstation if we are in the lab. Do not shut down your computer.</li>
+<li>Silently wrap up your headphones if they are out using the hourglass wrap and place them in your binder pocket.</li>
 <li>Silently place your pens, pencil, and USB drive in your binder pocket.</li>
 <li>Silently close your binder and planner.</li>
 <li>At the final bell, silently stand up, push in your chair, and pick up your materials. At this point you may talk. If you have a question for me, please remain in your seat so I can talk to you after your classmates have left. </li>
@@ -61,10 +59,27 @@
 <h3 id="unit-1-course-introduction">Unit 1: Course Introduction</h3>
 <h4 id="orientation">Orientation</h4>
 <p>Orientation | <a href="Orientation.html">Lesson Plan</a></p>
+<h4 id="chapter-1-the-world-of-geography">Chapter 1 The World of Geography</h4>
+<p>Chapter 1.1 The Five Themes of Geography</p>
+<p>Chapter 1.2 The Geographer's Tools</p>
+<h4 id="chapter-2-earths-physical-geography">Chapter 2 Earth's Physical Geography</h4>
+<p>Chapter 2.1 Our Planet, Earth</p>
+<p>Chapter 2.2 Forces Shaping Earth</p>
+<p>Chapter 2.3 Climate and Weather</p>
+<p>Chapter 2.4 How Climate Affects Vegetation</p>
+<h4 id="chapter-3-earths-human-geography">Chapter 3 Earth's Human Geography</h4>
+<p>Chapter 3.1 Population</p>
+<p>Chapter 3.2 Migration</p>
+<p>Chapter 3.3 Economic Systems</p>
+<p>Chapter 3.4 Political Systems</p>
 <h4 id="chapter-4-cultures-of-the-world">Chapter 4 Cultures of the World</h4>
 <p>Chapter 4.1 Understanding Culture | <a href="Chapter%204.1%20Understanding%20Culture.html">Lesson Plan</a></p>
 <p>Chapter 4.2 Culture and Society | <a href="Chapter%204.2%20Culture%20and%20Society.html">Lesson Plan</a></p>
 <p>Chapter 4.3 Cultural Change | <a href="Chapter%204.3%20Cultural%20Change.html">Lesson Plan</a></p>
+<h4 id="chapter-5-interacting-with-our-environment">Chapter 5 Interacting with Our Environment</h4>
+<p>Chapter 5.1 Natural Resources</p>
+<p>Chapter 5.2 Land Use</p>
+<p>Chapter 5.3 People's Effect on the Environment</p>
 <h3 id="unit-2-europe-and-russia">Unit 2: Europe and Russia</h3>
 <h4 id="chapter-6-europe-and-russia-physical-geography">Chapter 6 Europe and Russia: Physical Geography</h4>
 <p>Chapter 6.1 Land and Water | Lesson Plan</p>
@@ -80,37 +95,16 @@
 <p>Chapter 8.1 The Cultures of Western Europe | Lesson Plan</p>
 <p>Chapter 8.2 The Cultures of Eastern Europe | Lesson Plan</p>
 <p>Chapter 8.3 The Cultures of the Russian Federation | Lesson Plan</p>
-<h4 id="chapter-9-western-europe">Chapter 9 Western Europe</h4>
-<p>Chapter 9.1 The United Kingdom: Democracy and Monarchy | Lesson Plan</p>
-<p>Chapter 9.2 France: Cultural Heritage and Diversity | Lesson Plan</p>
-<p>Chapter 9.3 Sweden: A Welfare State | Lesson Plan</p>
-<p>Chapter 9.4 Italy: Northern and Southern Divisions | Lesson Plan</p>
-<p>Chapter 9.5 Germany: A Unified Nation | Lesson Plan</p>
-<h4 id="chapter-10-eastern-europe-and-russia">Chapter 10 Eastern Europe and Russia</h4>
-<p>Chapter 10.1 Poland: Preserving Tradition Amidst Change | Lesson Plan</p>
-<p>Chapter 10.2 Five Balkan Nations: A Region Tries to Rebuild | Lesson Plan</p>
-<p>Chapter 10.3 Ukraine: Independence and Beyond | Lesson Plan</p>
-<p>Chapter 10.4 Russia: A Huge Country Takes a New Path | Lesson Plan</p>
 <h3 id="projects">Projects</h3>
 <p>Digipo Artifact 1</p>
 <p>Country Study</p>
-<p>Chapter 1.1 The Five Themes of Geography (pp. 10-15)</p>
-<p>Chapter 1.2 The Geographer's Tools (pp. 16-22)</p>
 <h3 id="unit-3-africa">Unit 3: Africa</h3>
 <h4 id="chapter-11-africa-physical-geography">Chapter 11 Africa: Physical Geography</h4>
 <h4 id="chapter-12-africa-shaped-by-its-history">Chapter 12 Africa: Shaped by Its History</h4>
 <h4 id="chapter-13-cultures-of-africa">Chapter 13 Cultures of Africa</h4>
-<h4 id="chapter-14-north-africa">Chapter 14 North Africa</h4>
-<h4 id="chapter-15-west-africa">Chapter 15 West Africa</h4>
-<h4 id="chapter-16-east-africa">Chapter 16 East Africa</h4>
-<h4 id="chapter-17-central-and-southern-africa">Chapter 17 Central and Southern Africa</h4>
 <h3 id="projects-1">Projects</h3>
 <p>Digipo Artifact 2</p>
 <p>Country Study</p>
-<p>Chapter 2.1 Our Planet, Earth (pp. 28-32)</p>
-<p>Chapter 2.2 Forces Shaping Earth (pp. 33-39)</p>
-<p>Chapter 2.3 Climate and Weather (pp. 40-49)</p>
-<p>Chapter 2.4 How Climate Affects Vegetation (pp. 50-54)</p>
 <h3 id="unit-4-asia-and-the-pacific">Unit 4: Asia and the Pacific</h3>
 <h4 id="chapter-18-east-asia-physical-geography">Chapter 18 East Asia: Physical Geography</h4>
 <h4 id="chapter-19-south-southwest-and-central-asia-physical-geography">Chapter 19 South, Southwest, and Central Asia: Physical Geography</h4>
@@ -121,20 +115,9 @@
 <h3 id="projects-2">Projects</h3>
 <p>Digipo Artifact 3</p>
 <p>Country Study</p>
-<p>Chapter 3.1 Population (pp. 60-66)</p>
-<p>Chapter 3.2 Migration (pp. 67-73)</p>
-<p>Chapter 3.3 Economic Systems (pp. 74-79)</p>
-<p>Chapter 3.4 Political Systems (pp. 80-84)</p>
-<h3 id="unit-4-asia-and-the-pacific-1">Unit 4: Asia and the Pacific</h3>
-<h4 id="chapter-24-east-asia">Chapter 24 East Asia</h4>
-<h4 id="chapter-25-south-southwest-and-central-asia">Chapter 25 South, Southwest, and Central Asia</h4>
-<h4 id="chapter-26-southeast-asia-and-the-pacific-region">Chapter 26 Southeast Asia and the Pacific Region</h4>
 <h3 id="unit-5-country-study">Unit 5: Country Study</h3>
 <h3 id="projects-3">Projects</h3>
 <p>Digipo Artifact 4</p>
 <p>Country Study</p>
-<p>Chapter 5.1 Natural Resources (pp. 114-19)</p>
-<p>Chapter 5.2 Land Use (pp. 120-27)</p>
-<p>Chapter 5.3 People's Effect on the Environment (pp.128-32)</p>
 </body>
 </html>
