--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 <li>Planner</li>
 <li>Black, blue, and red pens</li>
 <li>Mechanical pencil</li>
-<li>8GB USB drive</li>
 <li>Earbuds</li>
 </ol>
 <h2 id="expectations">Expectations</h2>
 <p>The following information details the expectations we will normally deal with when we meet for class. The beginning of class (the first three to five minutes), during class, and the end of class (the last minute) are all important for creating a successful learning environment. When you don't meet the course expectations, you will receive one, two, or three strikes. Once you receive two strikes, your name will be added to the school detention list. Once you receive three strikes, you will be referred to the office. Strikes reset each day.</p>
 <h3 id="beginning-class">Beginning Class</h3>
 <ol type="1">
-<li>Come to class prepared with your daily materials: textbook, class binder, planner, black pen, blue pen, red pen, mechanical pencil, 8GB USB drive, and earbuds. If you do not have your class materials by the time class starts you will receive a strike.</li>
+<li>Come to class prepared with your daily materials: textbook, class binder, planner, black pen, blue pen, red pen, mechanical pencil, and earbuds. If you do not have your class materials by the time class starts you will receive a strike.</li>
 <li>Completely power down your phone and leave it on my desk. If your phone is powered on during class without permission from me, you will receive a strike. If you use your phone without permission, you will receive two strikes and your phone will be turned in to the office for the rest of the day.</li>
 <li>Enter the room silently and remain silent until I instruct you otherwise. If you talk to a classmate before I instruct you, you will receive a strike.</li>
 <li>Sit down in your seat and log in to your workstation by the class bell. If you are not seated in your assigned seat by the class bell you will receive two strikes unless you have a written excuse from the office or your previous teacher. The written excuse must explain where you were, what you were doing, the time you were sent to me, and who is excusing you.</li>
+<li>Check your email for the daily class instructions and read them completely in whichever language you are most comfortable with. If you miss class for any reason you are still responsible to check your email that day.</li>
 <li>Add any homework or dated reminders to your planner. When you are done, leave your planner open on your desk for me to sign.</li>
 <li>Begin silently working on the tasks for the class period.</li>
 </ol>
@@ -50,7 +50,7 @@
 <li>Do not pack up until the one-minute bell. If you begin packing up before the one-minute bell without permission, you will receive a strike. During the end of class, it is important to remain silent so that you can hear any announcements from the teacher or the office.</li>
 <li>Once the one-minute bell rings, silently log out of your workstation if we are in the lab. Do not shut down your computer.</li>
 <li>Silently wrap up your headphones if they are out using the hourglass wrap and place them in your binder pocket.</li>
-<li>Silently place your pens, pencil, and USB drive in your binder pocket.</li>
+<li>Silently place your pens and pencils in your binder pocket.</li>
 <li>Silently close your binder and planner.</li>
 <li>At the final bell, silently stand up, push in your chair, and pick up your materials. At this point you may talk. If you have a question for me, please remain in your seat so I can talk to you after your classmates have left. </li>
 </ol>
