Convert to HTML

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <h4 id="orientation">Orientation</h4>
 <p>Orientation | <a href="Orientation.html">Lesson Plan</a></p>
 <h4 id="chapter-1-the-world-of-geography">Chapter 1 The World of Geography</h4>
-<p>Chapter 1.1 The Five Themes of Geography |</p>
-<p>Chapter 1.2 The Geographer's Tools</p>
+<p>Chapter 1.1 The Five Themes of Geography | <a href="Chapter%201.1%20The%20Five%20Themes%20of%20Geography.html">Lesson Plan</a></p>
+<p>Chapter 1.2 The Geographer's Tools | <a href="Chapter%202.2%20The%20Geographer&#39;s%20Tools.html">Lesson Plan</a></p>
 <h4 id="chapter-2-earths-physical-geography">Chapter 2 Earth's Physical Geography</h4>
 <p>Chapter 2.1 Our Planet, Earth</p>
 <p>Chapter 2.2 Forces Shaping Earth</p>
